@@ -1,6 +1,6 @@
 /*
  * DBeaver - Universal Database Manager
- * Copyright (C) 2010-2025 DBeaver Corp and others
+ * Copyright (C) 2010-2026 DBeaver Corp and others
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -24,6 +24,7 @@ import org.eclipse.swt.events.MouseEvent;
 import org.eclipse.swt.events.SelectionAdapter;
 import org.eclipse.swt.events.SelectionEvent;
 import org.eclipse.swt.layout.GridData;
+import org.eclipse.swt.layout.GridLayout;
 import org.eclipse.swt.widgets.*;
 import org.jkiss.code.Nullable;
 import org.jkiss.dbeaver.DBException;
@@ -76,11 +77,11 @@ public class SearchMetadataPage extends AbstractSearchPage {
     private boolean searchInDefinitions;
     private int maxResults;
     private int matchTypeIndex;
-    private Set<DBSObjectType> checkedTypes = new HashSet<>();
-    private Set<String> searchHistory = new LinkedHashSet<>();
-    private Set<String> savedTypeNames = new HashSet<>();
+    private final Set<DBSObjectType> checkedTypes = new HashSet<>();
+    private final Set<String> searchHistory = new LinkedHashSet<>();
+    private final Set<String> savedTypeNames = new HashSet<>();
     private List<DBNNode> sourceNodes = new ArrayList<>();
-    private DBPProject currentProject;
+    private final DBPProject currentProject;
     private boolean showConnected;
 
     public SearchMetadataPage() {
@@ -96,7 +97,8 @@ public class SearchMetadataPage extends AbstractSearchPage {
 
         initializeDialogUnits(parent);
 
-        Composite searchGroup = UIUtils.createComposite(parent, 1);
+        Composite searchGroup = new Composite(parent, SWT.NONE);
+        searchGroup.setLayout(new GridLayout(1, false));
         searchGroup.setLayoutData(new GridData(GridData.FILL_BOTH));
 
         searchText = new Combo(searchGroup, SWT.DROP_DOWN);
@@ -113,11 +115,16 @@ public class SearchMetadataPage extends AbstractSearchPage {
             updateEnablement();
         });
 
-        Composite optionsGroup = new SashForm(parent, 2);
+        Composite optionsGroup = new SashForm(searchGroup, SWT.HORIZONTAL);
         optionsGroup.setLayoutData(new GridData(GridData.FILL_BOTH));
 
         {
-            Group sourceGroup = UIUtils.createControlGroup(optionsGroup, UISearchMessages.dialog_search_objects_group_objects_source, 1, GridData.FILL_BOTH, 0);
+            Composite sourceGroup = UIUtils.createTitledComposite(
+                optionsGroup,
+                UISearchMessages.dialog_search_objects_group_objects_source,
+                1,
+                GridData.FILL_BOTH
+            );
             DBPPlatform platform = DBWorkbench.getPlatform();
             final DBNProject projectNode = platform.getNavigatorModel().getRoot().getProjectNode(currentProject);
             DBNNode rootNode = projectNode == null ? platform.getNavigatorModel().getRoot() : projectNode.getDatabases();
@@ -142,8 +149,7 @@ public class SearchMetadataPage extends AbstractSearchPage {
                         }
                     }
                     if (element instanceof DBNNode) {
-                        if (element instanceof DBNDatabaseFolder) {
-                            DBNDatabaseFolder folder = (DBNDatabaseFolder)element;
+                        if (element instanceof DBNDatabaseFolder folder) {
                             Class<? extends DBSObject> folderItemsClass = folder.getChildrenClass();
                             return folderItemsClass != null && DBSObjectContainer.class.isAssignableFrom(folderItemsClass);
                         }
@@ -166,8 +172,7 @@ public class SearchMetadataPage extends AbstractSearchPage {
                     Object object = structSel.isEmpty() ? null : structSel.getFirstElement();
                     if (object instanceof DBNNode) {
                         for (DBNNode node = (DBNNode)object; node != null; node = node.getParentNode()) {
-                            if (node instanceof DBNDataSource && CONNECT_ON_CLICK) {
-                                DBNDataSource dsNode = (DBNDataSource) node;
+                            if (node instanceof DBNDataSource dsNode && CONNECT_ON_CLICK) {
                                 try {
                                     dsNode.initializeNode(null, status -> {
                                         if (status.isOK()) {
@@ -212,12 +217,11 @@ public class SearchMetadataPage extends AbstractSearchPage {
         }
 
         {
-            Group settingsGroup = UIUtils.createControlGroup(
+            Composite settingsGroup = UIUtils.createTitledComposite(
                 optionsGroup,
                 UISearchMessages.dialog_search_objects_group_settings,
                 2,
-                GridData.FILL_BOTH,
-                0);
+                GridData.FILL_BOTH);
 
             {
                 //new Label(searchGroup, SWT.NONE);
@@ -375,7 +379,7 @@ public class SearchMetadataPage extends AbstractSearchPage {
         if (!sourceNodes.isEmpty()) {
             dataSourceTree.getViewer().setSelection(
                 new StructuredSelection(sourceNodes));
-            DBNDataSource node = DBNDataSource.getDataSourceNode(sourceNodes.get(0));
+            DBNDataSource node = DBNDataSource.getDataSourceNode(sourceNodes.getFirst());
             if (node != null) {
                 dataSourceTree.getViewer().reveal(node);
             }
@@ -408,14 +412,14 @@ public class SearchMetadataPage extends AbstractSearchPage {
         return null;
     }
 
-    private DBSStructureAssistant getSelectedStructureAssistant()
+    private DBSStructureAssistant<?> getSelectedStructureAssistant()
     {
         return DBUtils.getAdapter(DBSStructureAssistant.class, getSelectedDataSource());
     }
 
     private void fillObjectTypes()
     {
-        DBSStructureAssistant assistant = getSelectedStructureAssistant();
+        DBSStructureAssistant<?> assistant = getSelectedStructureAssistant();
         typesTable.removeAll();
         if (assistant == null) {
             // No structure assistant - no object types
@@ -460,7 +464,7 @@ public class SearchMetadataPage extends AbstractSearchPage {
         }
 
         DBPDataSource dataSource = getSelectedDataSource();
-        DBSStructureAssistant assistant = getSelectedStructureAssistant();
+        DBSStructureAssistant<?> assistant = getSelectedStructureAssistant();
         if (dataSource == null || assistant == null) {
             throw new IllegalStateException("No active datasource");
         }
@@ -560,7 +564,7 @@ public class SearchMetadataPage extends AbstractSearchPage {
             // Object types
             StringBuilder typesString = new StringBuilder();
             for (DBSObjectType type : checkedTypes) {
-                if (typesString.length() > 0) {
+                if (!typesString.isEmpty()) {
                     typesString.append("|"); //$NON-NLS-1$
                 }
                 typesString.append(type.getTypeName());
@@ -589,7 +593,7 @@ public class SearchMetadataPage extends AbstractSearchPage {
         Object[] nodes = ((IStructuredSelection)tree.getViewer().getSelection()).toArray();
         for (Object obj : nodes) {
             DBNNode node = (DBNNode) obj;
-            if (sourcesString.length() > 0) {
+            if (!sourcesString.isEmpty()) {
                 sourcesString.append("|"); //$NON-NLS-1$
             }
             sourcesString.append(node.getNodeItemPath());
